Hotfix: use `em` unit for "Imagify bars" instead of `px`. Browsers can set a minimum font size: in that case, 10px is too small. The file sizes near the bars in the bulk page were overlapping the bars, making them unreadable (same color). By using `1.5em` instead of `15px` for example, solves the problem.

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -164,7 +164,7 @@ body.imagify-modal-is-open {
 	width: 100%;
 	padding: 0 !important;
 }
-.imagify-sweet-alert .sa-input-error:before, 
+.imagify-sweet-alert .sa-input-error:before,
 .imagify-sweet-alert .sa-input-error:after,
 .imagify-sweet-alert .la-ball-fall {
 	top: 25% !important;
@@ -189,7 +189,7 @@ body.imagify-modal-is-open {
 }
 
 #imagify-check-api-container {
-	font-weight: bold;	
+	font-weight: bold;
 }
 
 #imagify-check-api-container .dashicons {
@@ -245,7 +245,7 @@ body.imagify-modal-is-open {
 	height: 25px;
 	border-radius: 50%;
 }
-		
+
 .imagify-chart {
 	float: left;
 	margin-bottom: 20px;
@@ -345,10 +345,10 @@ body[class*="_imagify-ngg-bulk-optimization"] .media-item .progress .bar {
 }
 
 
-/* 
+/**
  *
  * == Settings page
- * 
+ *
  */
 
 
@@ -425,7 +425,7 @@ body[class*="_imagify-ngg-bulk-optimization"] .media-item .progress .bar {
 	padding: 3px 6px 5px;
 	font-size: 12px;
 	box-shadow: none!important;
-	line-height: 1.2;	
+	line-height: 1.2;
 }
 .imagify-settings .button.button-mini-flat:hover,
 .imagify-settings .button.button-mini-flat:focus {
@@ -479,7 +479,7 @@ body[class*="_imagify-ngg-bulk-optimization"] .media-item .progress .bar {
 	background: #8BC34A;
 	color: #FFF;
 	box-shadow: 0 3px 0 #6F9C3B;
-	text-shadow: 0 -1px 1px #6F9C3B, 1px 0 1px #6F9C3B, 0 1px 1px #6F9C3B!important;	
+	text-shadow: 0 -1px 1px #6F9C3B, 1px 0 1px #6F9C3B, 0 1px 1px #6F9C3B!important;
 }
 .imagify-settings .button-primary:hover,
 .imagify-settings .button-primary:focus,
@@ -1166,7 +1166,7 @@ input[id^="imagify_sizes_"]:checked + label {
 	margin-top: 2em;
 }
 @media (max-width: 820px) {
-	.imagify-settings {	
+	.imagify-settings {
 		display: -webkit-box;
 		display: -ms-flexbox;
 		display: flex;
@@ -1293,7 +1293,7 @@ a.btn-rocket:focus {
 }
 
 
-/* 
+/**
  * == Welcome section
  */
 
@@ -1383,8 +1383,8 @@ a.btn-rocket:focus {
 }
 
 
-/*
- * == Imagify Notices 
+/**
+ * == Imagify Notices
  */
 .imagify-notice.imagify-notice {
 	position: relative;
@@ -1459,7 +1459,7 @@ a.btn-rocket:focus {
 	background: rgba(0, 0, 0, 0.4) none repeat scroll 0 0;
 }
 
-/*
+/**
  * == Custom column & Metabox
  */
 .column-imagify_optimized_file.column-imagify_optimized_file {
@@ -1631,7 +1631,7 @@ ul.imagify-datas-details.imagify-datas-details {
 	font-size: 11px;
 }
 
-/*
+/**
  * == Bulk page
  */
 
@@ -1756,7 +1756,7 @@ ul.imagify-datas-details.imagify-datas-details {
 [class^="imagify-bar-"],
 #wp-admin-bar-imagify-profile [class^="imagify-bar-"] {
 	position: relative;
-	height: 15px;
+	height: 1.5em;
 	width: 100%;
 	background: #60758D;
 	color: #FFF;
@@ -1768,14 +1768,14 @@ ul.imagify-datas-details.imagify-datas-details {
 [class^="imagify-bar-"].right-outside-number {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-	padding-right: 45px;
+	padding-right: 4.5em;
 }
 .right-outside-number .imagify-barnb {
 	display: block;
-	margin-right: -45px;
+	margin-right: -4.5em;
 	text-align: right;
 	font-weight: bold;
-	line-height: 15px;
+	line-height: 1.5;
 }
 .imagify-progress-value,
 #wp-admin-bar-imagify-profile .imagify-progress-value {
@@ -1787,7 +1787,7 @@ ul.imagify-datas-details.imagify-datas-details {
 }
 .imagify-progress,
 #wp-admin-bar-imagify-profile .imagify-progress {
-	height: 15px;
+	height: 1.5em;
 }
 .imagify-progress {
 	transition: width .3s;
@@ -2084,7 +2084,7 @@ ul.imagify-datas-details.imagify-datas-details {
 	display: table;
 	width: 100%;
 }
-.tooltip-content.tooltip-table > * { 
+.tooltip-content.tooltip-table > * {
 	display: table-cell;
 	vertical-align: middle;
 }
@@ -2153,7 +2153,7 @@ ul.imagify-datas-details.imagify-datas-details {
 	color: #46b1ce;
 }
 
-/*
+/**
  * == Bulk table
  */
 .imagify-bulk-table {
@@ -2251,7 +2251,7 @@ ul.imagify-datas-details.imagify-datas-details {
 		opacity: 1;
   }
 }
-​
+
 @keyframes congrate {
 	0% {
 		opacity: 0;
@@ -2791,7 +2791,7 @@ td.imagify-cell-filename {
 .imagify-analyzing .imagify-numbers-notcalc,
 .imagify-modal-section.imagify-analyzing .imagify-loader {
 	display: block;
-} 
+}
 .imagify-modal-section .imagify-loader {
 	margin: 2em auto;
 }
